@@ -111,11 +111,10 @@ void gtk_file_filter_add_pattern (GtkFileFilter *filter, const gchar *pattern);
 
 void gtk_file_filter_add_custom (GtkFileFilter *filter, GtkFileFilterFlags needed, SV * func, SV * data=NULL);
     PREINIT:
-	GType param_types[] = {
-		GPERL_TYPE_SV
-	};
+	GType param_types[1];
 	GPerlCallback * callback;
     CODE:
+	param_types[0] = GPERL_TYPE_SV;
 	callback = gperl_callback_new (func, data, 1, param_types, G_TYPE_BOOLEAN);
 	gtk_file_filter_add_custom (filter, needed,
 	                            gtk2perl_file_filter_func, callback,
