@@ -117,11 +117,10 @@ gtk2perl_tree_view_search_equal_func (GtkTreeModel * model,
 static GPerlCallback *
 gtk2perl_tree_view_destroy_count_func_create (SV * func, SV *data)
 {
-	GType param_types [] = {
-		GTK_TYPE_TREE_VIEW,
-		GTK_TYPE_TREE_PATH,
-		GTK_TYPE_INT
-	};
+	GType param_types[3];
+	param_types[0] = GTK_TYPE_TREE_VIEW;
+	param_types[1] = GTK_TYPE_TREE_PATH;
+	param_types[2] = GTK_TYPE_INT;
 	return gperl_callback_new (func, data, G_N_ELEMENTS(param_types), param_types, 0);
 }
 
